tdf#151148 Finding KATAKANA which has voice consonant mark wrong

regression from
    commit c7551e8a46e2f9f8142aa7921a0494221ae096e8
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Sep 16 10:36:48 2021 +0200
    speedup CharacterClassificationImpl::toUpper

Change-Id: I0309dec3d08220b9616be185360013869598fa1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140541
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 222e56157c6317435088e09e52a0705bc6a1a83a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140508
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>